# python-pytest-testing-project-79

./: README.md  install.cast  pyproject.toml  setup.cfg  work.cast
page_loader/: __init__.py  errors_handlers.py  scripts.py
tests/: test_page_loader.py  test_page_loader_with_errors.py
tests/fixtures/: some-complex-page-com.html  test_files.py
tests/fixtures/fixtures_for_complex/: ru-hexlet-io-assets-application.css  ru-hexlet-io-packs-js-runtime.js
